--- a/docker/truffleruby_22.3/Dockerfile
+++ b/docker/truffleruby_22.3/Dockerfile
@@ -1,44 +1,47 @@
 ##
-# JRuby 9.4 (CRuby 3.1 compatible) with Node.js 16.x.
-# - https://www.jruby.org/download
+# TruffleRuby 22.3 (CRuby 3.1 compatible) with Node.js 16.x.
+# - https://github.com/graalvm/container/blob/master/truffleruby/README.md
+# - https://github.com/oracle/truffleruby/blob/master/doc/user/compatibility.md
 #
 # NOTE: Linted by hadolint.
 #
-#   docker run --rm -i ghcr.io/hadolint/hadolint < docker/jruby-9.4/Dockerfile
+#   docker run --rm -i ghcr.io/hadolint/hadolint < docker/truffleruby-22.3/Dockerfile
 #
 # NOTE: A command to build image.
 #
 #   cd convenient_service
-#   cp Gemfile Gemfile.jruby-9.4
-#   docker build . -f docker/jruby-9.4/Dockerfile -t convenient_service:jruby-9.4
-#   # or `task docker:build ENGINE=jruby VERSION=9.4`
+#   cp Gemfile Gemfile.truffleruby-22.3
+#   docker build . -f docker/truffleruby-22.3/Dockerfile -t convenient_service:truffleruby-22.3
+#   # or `task docker:build RUBY_ENGINE=truffleruby RUBY_VERSION=22.3`
 #
 # NOTE: A command to run bash in container.
 #
 #   cd convenient_service
-#   docker run --rm -it -v $(pwd):/gem convenient_service:jruby-9.4 bash
-#   # or `task docker:bash ENGINE=jruby VERSION=9.4`
+#   docker run --rm -it -v $(pwd):/gem convenient_service:truffleruby-22.3 bash
+#   # or `task docker:bash RUBY_ENGINE=jruby RUBY_VERSION=9.4`
 #
 # NOTE: If there are no memory, performance, or cost constraints, prefer to use as standard Linux distribution as it is possible.
 # In a general case, you simply won't have enough time to resolve all the "quirks" of more specific distributions if you are an application developer.
-# `jruby:9.4` uses Ubuntu under the hood.s
-# - https://hub.docker.com/_/jruby/tags
-# - https://github.com/jruby/docker-jruby/blob/master/9.4/jre8/Dockerfile
-# - https://github.com/adoptium/containers/blob/main/19/jdk/ubuntu/jammy/Dockerfile.releases.full#L20
+# `ghcr.io/graalvm/truffleruby:debian-22.3` uses Debian (that is similar to Ubuntu) under the hood.
+# - https://github.com/graalvm/container/pkgs/container/truffleruby/65464856?tag=debian-22.3
+# - https://github.com/graalvm/container/blob/master/truffleruby/Dockerfile.debian#L6
+# - https://www.graalvm.org/latest/docs/getting-started/container-images/
 #
 # NOTE: Gallium means Node.js 16.x.
 # https://github.com/nodejs/Release
 #
-FROM jruby:9.4
+FROM ghcr.io/graalvm/truffleruby:debian-22.3
 
 ##
-# NOTE: `git` is `bundle install` dependency.
+# NOTE: `git`, `make`, `gcc` are `bundle install` dependencies.
 #
 # NOTE: `curl` and `gnupg2` are Node.js 16.x dependencies.
 # https://github.com/timbru31/docker-ruby-node/blob/master/3.2/16/slim/Dockerfile
 #
 RUN apt-get update -qq \
   && apt-get install --no-install-recommends -y git \
+  && apt-get install --no-install-recommends -y make \
+  && apt-get install --no-install-recommends -y gcc \
   && apt-get install --no-install-recommends -y curl \
   && apt-get install --no-install-recommends -y gnupg2 \
   && apt-get clean \
@@ -55,7 +58,7 @@ COPY . /gem
 # - https://docs.docker.com/engine/reference/builder/#env
 # - https://stackoverflow.com/questions/48863711/is-it-possible-to-koverride-gemfile-for-local-development
 #
-ENV BUNDLE_GEMFILE=Gemfile.jruby-9.4
+ENV BUNDLE_GEMFILE=Gemfile.truffleruby-22.3
 
 RUN bundle install
 
