--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,6 +149,10 @@ jobs:
         run: task rspec
       - name: Install dependencies for appraisals
         run: task deps:install
+      - name: Run RSpec with Rails 7.1
+        run: APPRAISAL=rails_7.1 task rspec
+      - name: Run RSpec with Dry
+        run: APPRAISAL=dry task rspec
       - name: Run RSpec with Rails 7.0
         run: APPRAISAL=rails_7.0 task rspec
       - name: Run RSpec with Rails 6.1
@@ -157,8 +161,6 @@ jobs:
         run: APPRAISAL=rails_6.0 task rspec
       - name: Run RSpec with Rails 5.2
         run: APPRAISAL=rails_5.2 task rspec
-      - name: Run RSpec with Dry
-        run: APPRAISAL=dry task rspec
       - name: Run Minitest
         run: task minitest
       ##
