chore(taskfile): prefer leading ENV variables

--- a/.dev/.tmuxinator.yml
+++ b/.dev/.tmuxinator.yml
@@ -15,8 +15,8 @@ windows:
       layout: even-vertical
       root: .
       panes:
-        - task docker:bash RUBY_ENGINE=ruby RUBY_VERSION=2.7
-        - task docker:bash RUBY_ENGINE=ruby RUBY_VERSION=3.3
+        - RUBY_ENGINE=ruby RUBY_VERSION=2.7 task docker:bash
+        - RUBY_ENGINE=ruby RUBY_VERSION=3.3 task docker:bash
         - git status
   - api_docs:
       layout: even-vertical
