--- a/docker/ruby_3.3/Dockerfile
+++ b/docker/ruby_3.3/Dockerfile
@@ -47,12 +47,14 @@ WORKDIR /gem
 
 COPY . /gem
 
+ENV RUBY_ENGINE=ruby
+
 ##
 # NOTE: Every container has its own copy of `Gemfile`. This way a developer doesn't need to delete `Gemfile.lock` all the time when changing containers.
 # - https://docs.docker.com/engine/reference/builder/#env
 # - https://stackoverflow.com/questions/48863711/is-it-possible-to-override-gemfile-for-local-development
 #
-ENV BUNDLE_GEMFILE=Gemfile.ruby-3.3
+ENV BUNDLE_GEMFILE=Gemfile.${RUBY_ENGINE}_${RUBY_VERSION}
 
 RUN bundle install
 
