--- a/docker/jruby_9.4/Dockerfile
+++ b/docker/jruby_9.4/Dockerfile
@@ -59,10 +59,6 @@ ENV RUBY_ENGINE=ruby
 #
 ENV BUNDLE_GEMFILE=Gemfile.${RUBY_ENGINE}_${RUBY_VERSION}
 
-RUN bundle install
-
-RUN bundle exec appraisal install
-
 ##
 # NOTE: Installs `task`.
 # https://taskfile.dev/installation/#install-script
@@ -70,6 +66,8 @@ RUN bundle exec appraisal install
 # NOTE: `task` is installed into `~/bin`. That is why `-b /bin` is used. See `echo ${PATH}` to debug.
 #
 RUN sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /bin
+
+RUN task deps:install
 
 ##
 # NOTE: Intalls Node.js 16.x and `yarn`.
