--- a/docker/ruby_2.7/Dockerfile
+++ b/docker/ruby_2.7/Dockerfile
@@ -56,10 +56,6 @@ ENV RUBY_ENGINE=ruby
 #
 ENV BUNDLE_GEMFILE=Gemfile.${RUBY_ENGINE}_${RUBY_VERSION}
 
-RUN bundle install
-
-RUN bundle exec appraisal install
-
 ##
 # NOTE: Installs `task`.
 # https://taskfile.dev/installation/#install-script
@@ -67,6 +63,8 @@ RUN bundle exec appraisal install
 # NOTE: `task` is installed into `~/bin`. That is why `-b /bin` is used. See `echo ${PATH}` to debug.
 #
 RUN sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /bin
+
+RUN task deps:install
 
 ##
 # NOTE: Is used to check whether a command is executed inside a Docker container. See Rakefile for examples.
