--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -60,14 +60,23 @@ tasks:
   #
   deps:install:
     cmds:
+      - cp Gemfile Gemfile.{{.RUBY_ENGINE}}_{{.RUBY_VERSION}}
       - bundle install
       - bundle exec appraisal install
 
+  ##
+  # NOTE: Meaning of `2> /dev/null`.
+  # - https://stackoverflow.com/a/10250395/12201472
+  #
+  # NOTE: Meaning of `|| true`.
+  # - https://superuser.com/a/887349/1180656
+  #
   deps:clean:
     cmds:
-      - "bundle exec rake confirm \"This task removes Gemfile*.lock and gemfiles/**/*. Are you sure?\""
-      - rm Gemfile*.
+      - "bundle exec rake confirm \"This task removes Gemfile.* and gemfiles/**/*. Are you sure?\""
+      - rm Gemfile.* 2> /dev/null || true
       - rm -rf gemfiles
+      - touch gemfiles/.gitkeep
 
   ##
   # NOTE: Usage examples.
@@ -117,7 +126,7 @@ tasks:
   # NOTE: Naming `RUBY_ENGINE` is inspired by `ruby_engine` gem.
   # - https://github.com/janlelis/ruby_engine
   #
-  # NOTE: Meaning of `|| 2> /dev/null`.
+  # NOTE: Meaning of `2> /dev/null`.
   # - https://stackoverflow.com/a/10250395/12201472
   #
   # NOTE: Meaning of `|| true`.
