--- a/docker/truffleruby_22.3/Dockerfile
+++ b/docker/truffleruby_22.3/Dockerfile
@@ -53,7 +53,7 @@ WORKDIR /gem
 
 COPY . /gem
 
-ENV RUBY_ENGINE=ruby
+ENV RUBY_ENGINE=truffleruby
 
 ##
 # NOTE: Every container has its own copy of `Gemfile`. This way a developer doesn't need to delete `Gemfile.lock` all the time when changing containers.
